fix h1 problem by closing bracket to header image and align header image with text

--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ vertical-align: baseline;
   height: 200px;
   overflow: hidden;
   border-radius: 50%;
+  vertical-align: middle;
 }
 
 h1 {
